--- a/Runtime/NativeMessenger.asmdef
+++ b/Runtime/NativeMessenger.asmdef
@@ -4,7 +4,7 @@
   "references": [
     "GUID:2665a8d13d1b3f18800f46e256720795",
     "GUID:734d92eba21c94caba915361bd5ac177",
-    "Unity.Collections"
+    "GUID:e0cd26848372d4e5c891c569017e11f1"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
