--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 ﻿{
   "name": "com.bustedbunny.nativemessenger",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "displayName": "ECS Native Messenger",
   "description": "This is system-wide native messenger for Unity Entities. It provides an efficient way to trigger systems on demand without involving entities data or any structural changes.",
   "unity": "2022.2",
-  "unityRelease": "19f",
+  "unityRelease": "2f19",
   "dependencies": {
     "com.unity.entities": "1.0.8"
   },
